--- a/style.css
+++ b/style.css
@@ -1,60 +1,123 @@
-  body {
-    background-color : #F6E4D2;
-  }
-  
-  #title-page{
-    font-family: Alegreya SC;
-    font-size: 90px;
-    text-align: center;
-  }
-  
-#mainpic{
-    border-radius: 15px;
+@import url(https://fonts.googleapis.com/css?family=Nunito);
+
+html {
+  height: 100%;
+  overflow: hidden;
 }
 
-.main-div{
-  width: 75%;
-  background-color: white;
-  margin: 0 auto;
-  padding-top: 50px;
-  padding-bottom: 50px;
-  padding-left: 50px;
-  padding-right: 50px;
+body { 
+  margin:0;
+  padding:0;
+	perspective: 1px;
+	transform-style: preserve-3d;
+  height: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  font-family: Nunito;
+}
+
+h1 {
+   font-size: 250%
+}
+
+p {
+  font-size: 140%;
+  line-height: 150%;
+  color: #333;
+}
+
+.slide {
+  position: relative;
+  padding: 25vh 10%;
+  min-height: 100vh;
+  width: 100vw;
+  box-sizing: border-box;
+  box-shadow: 0 -1px 10px rgba(0, 0, 0, .7);
+	transform-style: inherit;
+}
+
+img {
+  position: absolute;
+  top: 50%;
+  left: 35%;
+  width: 320px;
+  height: 240px;
+  transform: translateZ(.25px) scale(.75) translateX(-94%) translateY(-100%) rotate(2deg);
+  padding: 10px;
+  border-radius: 5px;
+  background: rgba(240,230,220, .7);
+  box-shadow: 0 0 8px rgba(0, 0, 0, .7);
+}
+
+img:last-of-type {
+  transform: translateZ(.4px) scale(.6) translateX(-104%) translateY(-40%) rotate(-5deg);
+}
+
+.slide:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  box-shadow: 0 0 8px 1px rgba(0, 0, 0, .7);
+}
+
+.title {
+  width: 50%;
+  padding: 5%;
+  border-radius: 5px;
+  background: rgba(240,230,220, .7);
+  box-shadow: 0 0 8px rgba(0, 0, 0, .7);
+}
+
+.slide:nth-child(2n) .title {
+  margin-left: 0;
+  margin-right: auto;
+}
+
+.slide:nth-child(2n+1) .title {
+  margin-left: auto;
+  margin-right: 0;
+}
+
+.slide, .slide:before {
+  background: 50% 50% / cover;  
+}
+
+.header {
   text-align: center;
+  font-size: 175%;
+  color: #fff;
+  text-shadow: 0 2px 2px #000;
 }
 
-#optext{
-  font-family: Great Vibes; 
-  font-size: 50px; 
-  color: #494130;
+#title {
+  background-image: url("https://lorempixel.com/640/480/abstract/6/");
+  z-index:2;
 }
 
-.main-button{
-  background-color: #494130 !important;
-  font-family: Raleway !important;
+#title h1 {
+ transform: translateZ(.25px) scale(.75);
+ transform-origin: 50% 100%;
+
 }
 
-p{
-  font-size: 21px;
-  font-family: Raleway;
+#slide1:before {
+  background-image: url("https://lorempixel.com/640/480/abstract/4/");
+  transform: translateZ(-1px) scale(2);
 }
 
-.parraf-content{
-  font-size: 24px;
-  font-family: Raleway;
+#slide2 {
+  background-image: url("https://lorempixel.com/640/480/abstract/3/");
+  z-index:2;
 }
 
-hr { 
-    height: 1px;
-    background:#3e3628;
-    background-image: -webkit-linear-gradient(left,#e1dad0,#3e3628,#e1dad0);
-    background-image: -moz-linear-gradient(left,#e1dad0,#3e3628,#e1dad0);
-    background-image: -ms-linear-gradient(left,#e1dad0,#3e3628,#e1dad0);
-    background-image: -o-linear-gradient(left,#e1dad0,#3e3628,#e1dad0);
-} 
+#slide3:before {
+  background-image: url("https://lorempixel.com/640/480/abstract/5/");
+  transform: translateZ(-1px) scale(2);
+}
 
-h3 {
-  font-size: 40px;
-  font-family: Alegreya SC;
-  color: #494130
+#slide4 {
+  background: #222;
 }
